Fix cal cells sizing unevenly

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,6 +26,7 @@ html, body {
   border-left: 1px solid #cccccc;
   border-bottom: 1px solid #cccccc;
   height: 100%;
+  width: 100%;
 }
 
 .item:first-child {
